Optimización de código.

--- a/LD36.CSharp.csproj
+++ b/LD36.CSharp.csproj
@@ -70,6 +70,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\CreditsController.cs" />
+    <Compile Include="Assets\DeleteAwayFromTarget.cs" />
+    <Compile Include="Assets\DeleteWhenChildNumber.cs" />
     <Compile Include="Assets\EZ Camera Shake\Demo\Sample Scripts\ShakeByDistance.cs" />
     <Compile Include="Assets\EZ Camera Shake\Demo\Sample Scripts\ShakeOnKeyPress.cs" />
     <Compile Include="Assets\EZ Camera Shake\Demo\Sample Scripts\ShakeOnTrigger.cs" />
